[package]
name = "mem-mapped-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winuser", "impl-default", "memoryapi", "xinput", "winerror", "libloaderapi", "dsound", "profileapi", "fileapi", "handleapi", "timeapi", "synchapi", "winbase", "errhandlingapi"] }

